# ECIQC

./: .clang-tidy  .gitignore  CMakeLists.txt  DF_from_JSON.ipynb  LICENSE  README.md  codecov.yml  config.json  dcmtk_test.cpp  document_17_03_2023.md  draft_config.json  draft_user_config.json  expected_test_results.json  file_name_list.json  metadataEditor.cpp  metadataEditor.hpp  nlm  nlm.c  nlm.cpp  nohlmann.c  p  p.c  parser  parser.c  parser.cpp  pipeline_test.py  pipelinetest_main.py  t  t#  t.cpp  test.dcm  test.json
DICOM_Images/: 1-003.dcm  1-004.dcm  1-005.dcm  1-006.dcm  1-01.dcm  test2.dcm
DICOM_Images_temp/: 1-087.dcm  1-1copy.dcm  test2_PHILIPS.dcm  test2_SIEMENS.dcm
dcmtk/: CMakeCache.txt  CTestTestfile.cmake  DCMTKConfig.cmake  DCMTKTargets.cmake  Makefile  VERSION  cmake_install.cmake
docs/: eciqcDoxConfig  tutorial.tag
exe/: CLI.cpp  CLI3.cpp  CLI4.cpp  CMakeLists.txt  CliTools.cpp  qctool.cpp
result/: 1.3.6.1.4.1.14519.5.2.1.8162.7003.232425522272405527521317182328.dcm  1.3.6.1.4.1.14519.5.2.1.9999.103.1804857936051361179042156399626.dcm  1.3.6.1.4.1.14519.5.2.1.9999.103.2193513879957575143325780007380.dcm  1.3.6.1.4.1.14519.5.2.1.9999.103.2710019309218103448268301702692.dcm  1.3.6.1.4.1.14519.5.2.1.9999.103.4241186744585841409002315414111.dcm  1.3.6.1.4.1.14519.5.2.1.9999.103.4302489623856184849054003884378.dcm  1.3.6.1.4.1.9590.100.1.2.96572736712925677405506504960822704173.dcm  test_results_PipelineCase.json
schema/: 1-003.json  ContextCase.json  DF_from_JSON.ipynb  DateoverwriteCase.json  MultipleActionCase.json  PipelineCase.json  (+8 more)
(+637 files in other folders)
